--- a/index_page3.html
+++ b/index_page3.html
@@ -43,13 +43,13 @@
               <a href="#">contact</a>
             </nav>
           </header>
-          <img class="content-top__bpic" src="./images/desktop-image-hero-1.jpg" alt="" />
+          <img class="content-top__bpic" src="./images/desktop-image-hero-3.jpg" alt="" />
           <div class="select-state-mobile">
             <div class="state-up-mobile" >
-              <a href="./index_page3.html"><img src="./images/icon-angle-left.svg" alt="" >
+              <a href="./index_page2.html"><img src="./images/icon-angle-left.svg" alt="" >
               </a></div>
             <div class="state-down-mobile">
-              <a href="./index_page2.html"><img src="./images/icon-angle-right.svg" alt="">
+              <a href="./index.html"><img src="./images/icon-angle-right.svg" alt="">
               </a></div>
         </div>
         </div>
@@ -57,19 +57,17 @@
           <div class="content-top__info">
             <div class="select-state">
               <div class="state-up">
-                <a href="./index_page3.html"><img src="./images/icon-angle-left.svg" alt="" >
+                <a href="./index_page2.html"><img src="./images/icon-angle-left.svg" alt="" >
                 </a></div>
               <div class="state-down">
-                <a href="./index_page2.html"><img src="./images/icon-angle-right.svg" alt="">
+                <a href="./index.html"><img src="./images/icon-angle-right.svg" alt="">
                 </a></div>
             </div>
-          <h1>Discover innovative ways to decorate</h1>
+          <h1>Manufactured with the best materials</h1>
           <p>
-            We provide unmatched quality, comfort, and style for property owners
-            across the country. Our experts combine form and function in
-            bringing your vision to life. Create a room in your own style with
-            our collection and make your property a reflection of you and what
-            you love.
+            Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
+  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
+  experience in this industry, we understand what customers want for their home and office.
           </p>
           <div class="content-top__link">
             <p>SHOPNOW</p>
